--- a/employee_multidept_onedesg/package.json
+++ b/employee_multidept_onedesg/package.json
@@ -9,10 +9,13 @@
     "axios": "^1.2.1",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
