--- a/EmployeeAPI/EmployeeAPI/appsettings.json
+++ b/EmployeeAPI/EmployeeAPI/appsettings.json
@@ -2,12 +2,21 @@
   "ConnectionStrings": {
     "conStr": "Server=HP\\SqlExpress; Database=EmployeeAPI; Trusted_Connection=True; MultipleActiveResultSets=True"
   },
+
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Information"
+    },
+    "NLog": {
+      "MinimumLevel": "Debug",
+      "Targets": {
+        "file": {
+          "Type": "File",
+          "FileName": "logs/employeeapi.log",
+          "Layout": "${longdate}|${level:uppercase=true}|${logger}|${message} ${exception}"
+        }
+      }
     }
   },
-  "AllowedHosts": "*"
-}
+    "AllowedHosts": "*"
+  }
